--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           >
           <ul class="header-nav-list">
             <li class="nav-header-item">
-              <a class="item-nav-link" href="./index.html">Studio</a>
+              <a class="item-nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="nav-header-item">
               <a class="item-nav-link" href="">Portfolio</a>
@@ -74,6 +74,13 @@
           <h2 class="visually-hidden">Advantages</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
+              <div class="icon-list">
+                <a href="" class="icon-lin">
+                  <svg class="icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-astronaut"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="benefits-item-title">Strategy</h3>
               <p class="benefits-item-text">
                 Our goal is to identify the business problem to walk away with
@@ -81,6 +88,13 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="icon-list">
+                <a href="" class="icon-lin">
+                  <svg class="icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-clock"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="benefits-item-title">Punctuality</h3>
               <p class="benefits-item-text">
                 Bring the key message to the brand's audience for the best price
@@ -88,6 +102,13 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="icon-list">
+                <a href="" class="icon-lin">
+                  <svg class="icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-diagram"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="benefits-item-title">Diligence</h3>
               <p class="benefits-item-text">
                 Research and confirm brands with the strongest digital growth
@@ -95,6 +116,13 @@
               </p>
             </li>
             <li class="benefits-list-item">
+              <div class="icon-list">
+                <a href="" class="icon-lin">
+                  <svg class="icon" width="64" height="64">
+                    <use href="./images/icons.svg#icon-Group"></use>
+                  </svg>
+                </a>
+              </div>
               <h3 class="benefits-item-title">Technologies</h3>
               <p class="benefits-item-text">
                 Design practice focused on digital experiences. We bring forth a
