--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               <div class="icon-list">
                 <a href="" class="icon-lin">
                   <svg class="icon" width="64" height="64">
-                    <use href="./images/icons.svg#icon-astronaut"></use>
+                    <use href="./images/icons.svg#icon-antenna"></use>
                   </svg>
                 </a>
               </div>
@@ -119,7 +119,7 @@
               <div class="icon-list">
                 <a href="" class="icon-lin">
                   <svg class="icon" width="64" height="64">
-                    <use href="./images/icons.svg#icon-Group"></use>
+                    <use href="./images/icons.svg#icon-astronaut"></use>
                   </svg>
                 </a>
               </div>
@@ -149,6 +149,36 @@
               <div class="container workers-container">
                 <h3 class="workers-list-title">Mark Guerrero</h3>
                 <p class="workers-item-text">Product Designer</p>
+                <ul class="workers-link">
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="workers-list-item">
@@ -161,6 +191,36 @@
               <div class="container workers-container">
                 <h3 class="workers-list-title">Tom Ford</h3>
                 <p class="workers-item-text">Frontend Developer</p>
+                <ul class="workers-link">
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="workers-list-item">
@@ -173,6 +233,36 @@
               <div class="container workers-container">
                 <h3 class="workers-list-title">Camila Garcia</h3>
                 <p class="workers-item-text">Marketing</p>
+                <ul class="workers-link">
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="workers-list-item">
@@ -185,6 +275,36 @@
               <div class="container workers-container">
                 <h3 class="workers-list-title">Daniel Wilson</h3>
                 <p class="workers-item-text">UI Designer</p>
+                <ul class="workers-link">
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-inst"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-twit"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-fb"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="workers-social-icon">
+                    <a href="" target="_blank" class="workers-icon-lin">
+                      <svg class="workers-icon" width="40" height="40">
+                        <use href="./images/icons.svg#icon-in"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -198,72 +318,114 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-list-item">
-              <img
-                src="./images/BankingApp.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-info">
+                <img
+                  src="./images/BankingApp.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container portfolio-container">
                 <h3 class="portfolio-list-title">Banking App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/CashlessPayment.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-info">
+                <img
+                  src="./images/CashlessPayment.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container portfolio-container">
                 <h3 class="portfolio-list-title">Cashless Payment</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/MeditationApp.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-info">
+                <img
+                  src="./images/MeditationApp.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container portfolio-container">
                 <h3 class="portfolio-list-title">Meditation App</h3>
                 <p class="portfolio-item-text">App</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/TaxiService.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-info">
+                <img
+                  src="./images/TaxiService.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container portfolio-container">
                 <h3 class="portfolio-list-title">Taxi Service</h3>
                 <p class="portfolio-item-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/ScreenIllustrations.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-info">
+                <img
+                  src="./images/ScreenIllustrations.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container portfolio-container">
                 <h3 class="portfolio-list-title">Screen Illustrations</h3>
                 <p class="portfolio-item-text">Design</p>
               </div>
             </li>
             <li class="portfolio-list-item">
-              <img
-                src="./images/OnlineCourses.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
+              <div class="portfolio-info">
+                <img
+                  src="./images/OnlineCourses.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <p class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="container portfolio-container">
                 <h3 class="portfolio-list-title">Online Courses</h3>
                 <p class="portfolio-item-text">Marketing</p>
@@ -285,6 +447,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="container social-link">
+        <ul class="social-link-items">
+          <li class="social-items">
+            <a href="" target="_blank" class="social-icon-lin">
+              <p class="social-items-text">Social media</p>
+              <svg class="social-icon" width="40" height="40">
+                <use href="./images/icons.svg#icon-inst"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-items">
+            <a href="" target="_blank" class="social-icon-lin">
+              <svg class="social-icon" width="40" height="40">
+                <use href="./images/icons.svg#icon-twit"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-items">
+            <a href="" target="_blank" class="social-icon-lin">
+              <svg class="social-icon" width="40" height="40">
+                <use href="./images/icons.svg#icon-fb"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-items">
+            <a href="" target="_blank" class="social-icon-lin">
+              <svg class="social-icon" width="40" height="40">
+                <use href="./images/icons.svg#icon-in"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
     <!--end Footer-->
