--- a/index.html
+++ b/index.html
@@ -153,28 +153,28 @@
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-inst"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-twit"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-fb"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-in"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -195,28 +195,28 @@
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-inst"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-twit"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-fb"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-in"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -237,28 +237,28 @@
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-inst"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-twit"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-fb"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-in"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -279,28 +279,28 @@
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-inst"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-twit"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-fb"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="workers-social-icon">
                     <a href="" target="_blank" class="workers-icon-lin">
                       <svg class="workers-icon" width="40" height="40">
-                        <use href="./images/icons.svg#icon-in"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
