--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <ul class="benefits-list">
             <li class="benefits-list-item">
               <div class="icon-list">
-                <a href="" class="icon-lin">
+                <a href="#" class="icon-lin">
                   <svg class="icon" width="64" height="64">
                     <use href="./images/icons.svg#icon-antenna"></use>
                   </svg>
@@ -89,7 +89,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="icon-list">
-                <a href="" class="icon-lin">
+                <a href="#" class="icon-lin">
                   <svg class="icon" width="64" height="64">
                     <use href="./images/icons.svg#icon-clock"></use>
                   </svg>
@@ -103,7 +103,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="icon-list">
-                <a href="" class="icon-lin">
+                <a href="#" class="icon-lin">
                   <svg class="icon" width="64" height="64">
                     <use href="./images/icons.svg#icon-diagram"></use>
                   </svg>
@@ -117,7 +117,7 @@
             </li>
             <li class="benefits-list-item">
               <div class="icon-list">
-                <a href="" class="icon-lin">
+                <a href="#" class="icon-lin">
                   <svg class="icon" width="64" height="64">
                     <use href="./images/icons.svg#icon-astronaut"></use>
                   </svg>
