--- a/index.html
+++ b/index.html
@@ -432,46 +432,48 @@
     <!--Footer-->
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="./index.html"
-          >Web<span class="footer-logo-style">Studio</span></a
-        >
-        <p class="footer-item-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="container social-link">
-        <ul class="social-link-items">
-          <li class="social-items">
-            <a href="" target="_blank" class="social-icon-lin">
-              <p class="social-items-text">Social media</p>
-              <svg class="social-icon" width="40" height="40">
-                <use href="./images/icons.svg#icon-inst"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-items">
-            <a href="" target="_blank" class="social-icon-lin">
-              <svg class="social-icon" width="40" height="40">
-                <use href="./images/icons.svg#icon-twit"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-items">
-            <a href="" target="_blank" class="social-icon-lin">
-              <svg class="social-icon" width="40" height="40">
-                <use href="./images/icons.svg#icon-fb"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-items">
-            <a href="" target="_blank" class="social-icon-lin">
-              <svg class="social-icon" width="40" height="40">
-                <use href="./images/icons.svg#icon-in"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+        <div class="footer-sublogo">
+          <a class="footer-logo" href="./index.html"
+            >Web<span class="footer-logo-style">Studio</span>
+          </a>
+          <p class="footer-item-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="container social-link">
+          <ul class="social-link-items">
+            <li class="social-items">
+              <a href="" target="_blank" class="social-icon-lin">
+                <p class="social-items-text">Social media</p>
+                <svg class="social-icon" width="40" height="40">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-items">
+              <a href="" target="_blank" class="social-icon-lin">
+                <svg class="social-icon" width="40" height="40">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-items">
+              <a href="" target="_blank" class="social-icon-lin">
+                <svg class="social-icon" width="40" height="40">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-items">
+              <a href="" target="_blank" class="social-icon-lin">
+                <svg class="social-icon" width="40" height="40">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
     <!--end Footer-->
